--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "watch": "nodemon index.js",
     "test-watch": "jest --watchAll",
-    "test": "jest"
+    "test": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,8 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/GhofranDayyat/auth-api/issues"
+  }, "jest": {
+    "testEnvironment": "node"
   },
   "homepage": "https://github.com/GhofranDayyat/auth-api#readme",
   "dependencies": {
