--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4444
-MONGODB_URI=mongodb://localhost:27017/class8
-SECRET='SECRET'
+MONGODB_URI=mongodb+srv://admin:aaaa@class4.wfx9t.mongodb.net/test
+SECRET=SECRET
